# monadpp

./: .clang-tidy  .gitignore  CMakeLists.txt  ListMonad.hpp  Maybe.cpp  Maybe.hpp  Maybe.m4.hpp  Monad.hpp  Monad.m4  TestMonad.cpp  presentation.md  reveal.json  utility.hpp
haskell/: StateExample.hs  TestMaybe.cabal  TestMaybe.hs
